--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.18.2",
-    "preact": "^10.27.0"
+    "preact": "^10.27.0",
+    "sqlite3": "^5.1.6"
   }
 }
