--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,5 +17,9 @@
     "express": "^4.18.2",
     "preact": "^10.27.0",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "@preact/preset-vite": "^2.8.0",
+    "vite": "^5.0.0"
   }
 }
